--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="col-md-12 col-lg-8">
         <h2 class="greeting-card">Hi.</h2>
         <div class="container">
-        <p class="lead"> I'm <em>Daniel</em> - a second year computer science student at Western Washington University with a fascination with the role of digital media in the human experience. I love using cutting edge frameworks and technologies to create <em>elegant</em> and <em>functional</em> applications with an emphasis on beautiful and intuitive UI/UX. I also have a keen interest in <em>machine learning</em> and <em>data science</em>. When I'm not busy with coursework or playing around with the various side projects (that you can view below, or on my GitHub), I enjoy writing and drawing. Feel free to <a  href="#">contact me</a> for friendly questions, business inquiries, or just to chat!</p>
+        <p class="lead"> I'm <em>Daniel</em> - a second year computer science student at Western Washington University fascinated with the role of digital media in the human experience. I love using cutting edge frameworks and technologies to create <em>elegant</em> and <em>functional</em> applications with an emphasis on beautiful and intuitive UI/UX. I also have a budding interest in <em>machine learning</em> and <em>data science</em>. When I'm not busy with coursework or playing around with the various side projects (that you can view below, or on my GitHub), I enjoy writing and drawing. Feel free to contact me for friendly questions, business inquiries, or just to chat!</p>
         </div>
     </div>
 
