--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <li>Current secretary of the Bellingham chapter of the Association of Computing Machinery.</li>
             <li>Built this website from scratch to learn HTML, CSS, and basic web design concepts.</li>
         </ul>
-        <button class="resume-btn btn btn-primary btn-large" href="#">Resume</button>
+        <button class="resume-btn btn btn-primary btn-large" href="https://i.imgflip.com/2dnnrm.jpg">Resume</button>
     </div>
     <hr>
 </div>
