--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
 <div class="container">
     <div class="row"> 
     <div class="col-md-12 col-lg-4">
-        <p class="blockquote">"Daniel is probably the single laziest asshole I've ever met. Dude can like, sleep for 20 hours straight without batting an eye. I've met rocks that do more in a day than Daniel. Like, seriously. It takes talent to be as lazy as he is." - Abraham Lincoln</p>
+        <p class="blockquote">"*Slaps roof of Daniel* This bad boy can fit so much unconditional love and support for his friends and peers" - Used Car Salesman</p>
     </div>
     <div class="col-md-12 col-lg-4">
-        <p class="blockquote">"Bro. Broooooooooooooooooo. Daniel? Daniel's a dude. He's a bro. Brooooooooooooooooooooooooo." - Some random high dude on my street</p>
+        <p class="blockquote">"So what if he sucks at math? And maybe he can't design for shit, and okay, maybe his code is pretty ass too. But what really matters, deep down, is how good a man is at mario kart. And Daniel is very, very, very good at mario kart." - The Dude I Just Destroyed in MK</p>
     </div>
     <div class="col-md-12 col-lg-4">
-        <p class="blockquote">"So what if he sucks at math? And maybe he can't design for shit, and okay, maybe his code is pretty ass too. But what really matters, deep down, is how good a man is at mario kart. And Daniel is very, very, very good at mario kart." - Emilia Clarke</p>
+        <p class="blockquote">"This weirdly circular Taiwanese man child highkey be lookin like a snacc, all day everyday." - Emilia Clarke</p>
     </div>
     </div>
 </div>
