minor styling fixes

--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#home">Home</a>
+            <a class="nav-link home-link" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link about-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link projects-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#software">Software</a>
+            <a class="nav-link software-link" href="#software">Software</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills</a>
+            <a class="nav-link skills-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link contact-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -128,7 +128,6 @@
     <div class="col-md-4">
         <div class="card project0">
             <div class="container">
-            <img class="card-img-top" src="#">
             <div class="card-body">
                <h4 class="card-title">Overclocked Ape</h4> 
                 <p class="card-text">Overclocked Ape was a website that I made for a friend's company. It is entirely fictituious and absolutely ridiculous.</p>
@@ -140,7 +139,6 @@
 
     <div class="col-md-4">
         <div class="card project1" href="#">
-            <img class="card-img-top" src="#">
             <div class="card-body">
                <h4 class="card-title">Campus Corners</h4> 
                 <p class="card-text">Campus Corners is a place where people can view cool locations found on the Western Washington University campus - submitted by students, for students. The project was developed initially as a way to learn the MEAN stack and practice RESTful API coding habits, but quickly garnered popularity among the student body.</p>
@@ -151,7 +149,6 @@
 
     <div class="col-md-4">
         <div class="card project2">
-            <img class="card-img-top" src="#">
             <div class="card-body">
                <h4 class="card-title">DAILY</h4> 
                 <p class="card-text">Daily is a modern, minimalistic productivity tool designed as a UI/UX thought experiment by Daniel King. Initially frustrated by the planners/to-do list applications currently on the market with frustrating UI's and unintuitive layouts, Daniel decided to create his own application - one designed with simplicity and funcitonality in mind. Daily is still under development.</p>
@@ -209,13 +206,13 @@
 <div class="container">
     <div class="row"> 
     <div class="col-md-12 col-lg-4">
-        <p class="blockquote">"*Slaps roof of Daniel* This bad boy can fit so much unconditional love and support for his friends and peers" - Used Car Salesman</p>
+        <p class="blockquote quote1">"*Slaps roof of Daniel* This bad boy can fit so much unconditional love and support for his friends and peers" - Used Car Salesman</p>
     </div>
     <div class="col-md-12 col-lg-4">
-        <p class="blockquote">"So what if he sucks at math? And maybe he can't design for shit, and okay, maybe his code is pretty ass too. But what really matters, deep down, is how good a man is at mario kart. And Daniel is very, very, very good at mario kart." - The Dude I Just Destroyed in MK</p>
+        <p class="blockquote quote2">"So what if he sucks at math? And maybe he can't design for shit, and okay, maybe his code is pretty ass too. But what really matters, deep down, is how good a man is at mario kart. And Daniel is very, very, very good at mario kart." - The Dude I Just Destroyed in MK</p>
     </div>
     <div class="col-md-12 col-lg-4">
-        <p class="blockquote">"This weirdly circular Taiwanese man child highkey be lookin like a snacc, all day everyday." - Emilia Clarke</p>
+        <p class="blockquote quote3">"This weirdly circular Taiwanese man child highkey be lookin like a snacc, all day everyday." - Emilia Clarke</p>
     </div>
     </div>
 </div>
