changed the style and layout

--- a/index.html
+++ b/index.html
@@ -32,29 +32,28 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top navbar-custom" >
   <div class="container">
-      <a class="navbar-brand" href="#"><em>D/K</em></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item text-center">
             <a class="nav-link home-link" href="#home">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item text-center">
             <a class="nav-link about-link" href="#about">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item text-center">
             <a class="nav-link projects-link" href="#projects">Projects</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item text-center">
             <a class="nav-link software-link" href="#software">Software</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item text-center">
             <a class="nav-link skills-link" href="#skills">Skills</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item text-center">
             <a class="nav-link contact-link" href="#contact">Contact</a>
           </li>
         </ul>
@@ -69,9 +68,13 @@
 
 <div class="landing container-fluid text-center" id="home">
     <!-- Separate D and K for animations -->
-    <h1>D/K</h1>
-    <p><span class="landing1">designer.</span><span class="landing2"> developer.</span><span class="landing3"> daniel.</span></p>
+    <h1>DANIEL KING.</h1>
+    <p>designer | developer | daniel</p>
+    <h2>wwu computer science student</h2>
+    <h2>self-prescribed coffee addict</h2>
 </div>
+
+
 
 
 
@@ -81,15 +84,17 @@
 
 <div class="about container-fluid padding" id="about">
 <div class="row padding">
-    <div class="col-md-12 col-lg-4">
+    <div class="col-md-12 col-lg-3">
         <!-- img-fluid class makes it responsive -->
-        <img class="face img-fluid" src="assets/face.JPG">
+        <h1 class="section-title">about.</h1>
     </div>
 
-    <div class="col-md-12 col-lg-8">
-        <h2 class="greeting-card">Hi.</h2>
+    <div class="col-md-12 col-lg-9">
         <div class="container">
-        <p class="lead"> I'm <em>Daniel</em> - a second year computer science student at Western Washington University fascinated with the role of digital media in the human experience. I love using cutting edge frameworks and technologies to create <em>elegant</em> and <em>functional</em> applications with an emphasis on beautiful and intuitive UI/UX. I also have a budding interest in <em>machine learning</em> and <em>data science</em>. When I'm not busy with coursework or playing around with the various side projects (that you can view below, or on my GitHub), I enjoy writing and drawing. Feel free to contact me for friendly questions, business inquiries, or just to chat!</p>
+            <p class="lead"><span class="greeting">Hi. </span>I'm <em>Daniel</em> - a 19 year old second year computer science student at Western Washington University fascinated with the role of digital media in the human experience. I enjoy creating <em>functional</em> and <em>elegant</em> applications with an emphasis on creative and unique UI/UX. I like to implement different design philosophies and experiment with visual elements in order to enhance the interactivity and user experience of the product.</p>
+            <p class="lead">Lately, I've been pretty interested in machine learning, data science, and data visualization. When i'm not busy with coursework or playing around with various side projects, I enjoy writing, drawing, and cooking.</p>
+            <hr>
+            <p style="text-align: center">always creating. always learning.</p>
         </div>
     </div>
 
@@ -100,18 +105,14 @@
 </div>
 
 <!-- ============================================================================== -->
-<!-- Projects -->
+<!-- Projects Divider -->
 <!-- ============================================================================== -->
 
 
 <div class=" container-fluid padding" id="projects">
 <div class="row projects text-center">
     <div class="col-12">
-        <h1 class="display-4">Projects</h1>
-    </div>
-    <hr>
-    <div class="col-12">
-        <p class="lead">Since starting computer science in college and discovering my passion for technology, I have done many side projects in my free time - everything from basic web design with <em>html</em>, <em>CSS</em>, and <em>JavaScript</em>, to more advanced Web Applications using the <em>MEAN Stack</em> and <em>RESTful API</em> practices. Lately, I've been particularly interested in the various applications of machine learning. Check out some of my projects below!</p>
+        <p class="projects-banner">projects projects projects projects projects projects projects projects projects projects projects projects projects projects</p>
     </div>
 </div>
 </div>
@@ -123,98 +124,92 @@
 <!-- ============================================================================== -->
 
 <div class="projects-showcase container-fluid padding" id="projects">
-<div class="row padding">
-
-    <div class="col-md-4">
-        <div class="card project0">
-            <div class="container">
-            <div class="card-body">
-               <h4 class="card-title">Overclocked Ape</h4> 
-                <p class="card-text">Overclocked Ape was a website that I made for a friend's company. It is entirely fictituious and absolutely ridiculous.</p>
-                <a href="#" class="btn btn-outline-secondary">See Website</a>
-            </div>
-            </div>
+    <div class="row project-row">
+        <div class="col-md-12 col-lg-6 project-title">
+            <h1 class="project-title">OA.</h1>
+        </div>
+        <div class="col-md-12 col-lg-6 ">
+            <p class="project-description">Overclocked Ape is a static page for a design company founded by a friend. Utilizing advanced HTML, CSS, jQuery, and other frameworks, I explored the concepts of brutalism and maximalist design in a contemporary website. <a href="#">View Website.</a></p>
+        </div>
+    </div>
+    
+    <div class="row project-row">
+        <div class="col-md-12 col-lg-6">
+            <h1 class="project-title">CC.</h1>
+        </div>
+        <div class="col-md-12 col-lg-6">
+            <p class="project-description">Campus Corners started off as an attempt to practice creating node web applications, but grew into a large project that ended up attractinve a decent amount of users. Now, it is a popular site used by newcomers to Western Washington University and seniors alike to discover new and interesting locations on campus. <a href="#">View Website.</a></p>
         </div>
     </div>
 
-    <div class="col-md-4">
-        <div class="card project1" href="#">
-            <div class="card-body">
-               <h4 class="card-title">Campus Corners</h4> 
-                <p class="card-text">Campus Corners is a place where people can view cool locations found on the Western Washington University campus - submitted by students, for students. The project was developed initially as a way to learn the MEAN stack and practice RESTful API coding habits, but quickly garnered popularity among the student body.</p>
-                <a href="#" class="btn btn-outline-secondary">See Website</a>
-            </div>
+    <div class="row project-row">
+        <div class="col-md-12 col-lg-6">
+            <h1 class="project-title">100.</h1>
+        </div>
+        <div class="col-md-12 col-lg-6">
+            <p class="project-description">Overclocked Ape is a static page for a design company founded by a friend. Utilizing advanced HTML, CSS, jQuery, and other frameworks, I explored the concepts of brutalism and maximalist design in a contemporary website. <a href="#">View Website.</a></p>
         </div>
     </div>
+    
+</div>
 
-    <div class="col-md-4">
-        <div class="card project2">
-            <div class="card-body">
-               <h4 class="card-title">DAILY</h4> 
-                <p class="card-text">Daily is a modern, minimalistic productivity tool designed as a UI/UX thought experiment by Daniel King. Initially frustrated by the planners/to-do list applications currently on the market with frustrating UI's and unintuitive layouts, Daniel decided to create his own application - one designed with simplicity and funcitonality in mind. Daily is still under development.</p>
-                <a href="#" class="btn btn-outline-secondary">See Website</a>
-            </div>
-        </div>
+
+<div class=" container-fluid padding" id="projects">
+<div class="row projects text-center">
+    <div class="col-12">
+        <p class="projects-banner">projects projects projects projects projects projects projects projects projects projects projects projects projects projects</p>
     </div>
 </div>
 </div>
-
 
 <!-- ============================================================================== -->
 <!-- SOFTWARE -->
 <!-- ============================================================================== -->
 
-
-<div class="skills container-fluid padding" id="software">
+<div class="about container-fluid padding" id="software">
 <div class="row padding">
-
-    <div class="container">
-        <h2 class="skills-title">Software</h2>
-        <div class="software-desc">
-            <p>I'm <span style="color: #79c6f7">pretty good</span> at <em class="skills-tier-1"> Python </em> | <em class="skills-tier-1"> Java </em> | <em class="skills-tier-1"> Javascript </em> | <em class="skills-tier-1"> HTML </em> | <em class="skills-tier-1"> CSS3 </em> | <em class="skills-tier-1"> jQuery </em> | <em class="skills-tier-1"> Bootstrap </em>. </p>
-            <p>I'm <span style="color: #8bb1ef">okay</span> at <em class="skills-tier-2"> NodeJS </em> | <em class="skills-tier-2"> Express </em> | <em class="skills-tier-2"> C </em> | <em class="skills-tier-2"> MongoDB </em> | <em class="skills-tier-2"> Mongoose </em> | <em class="skills-tier-2"> R </em> .</p>
-            <p>I'm <span style="color: #a6a4f2">still learning</span> <em class="skills-tier-3"> React </em> | <em class="skills-tier-3"> Django </em> |<em class="skills-tier-3"> Flask </em> .</p> 
+    <div class="col-md-12 col-lg-9">
+        <div class="container">
+            <ul style="list-style-type: none">
+                <li class="software-desc1"> python | java | javascript | html/css </li>
+                <li class="software-desc2"> nodejs | express | r | c | mongoose | mongodb </li>
+                <li class="software-desc3"> react | django | flask | racket </li>
+            </ul>
         </div>
     </div>
+    <div class="col-md-12 col-lg-3">
+        <h1 class="section-title">software.</h1>
+    </div>
+
 
 </div>
 </div>
+
 
 <!-- ============================================================================== -->
 <!-- SKILLS -->
 <!-- ============================================================================== -->
 
 <div class="bonus-section container-fluid padding" id="skills">
-<div class="row text-center">
-    <div class="col-12">
-        <h1 class="display-4">Other Skills</h1>
-    </div>
-    <hr>
-    <div class="col-12">
-        <hr>
-        <ul>
-            <li>Freelance graphic design experience for over a year.</li>
-            <li>Proficiency in Adobe Xd CC for wireframing and Photoshop for general web design.</li>
-            <li>I speak Mandarin Chinese and English fluently.</li>
-            <li>Current secretary of the Bellingham chapter of the Association of Computing Machinery.</li>
-            <li>Built this website from scratch to learn HTML, CSS, and basic web design concepts.</li>
-        </ul>
-        <button class="resume-btn btn btn-primary btn-large" href="https://i.imgflip.com/2dnnrm.jpg">Resume</button>
-    </div>
-    <hr>
-</div>
-<div class="container">
-    <div class="row"> 
+<div class="row padding">
     <div class="col-md-12 col-lg-4">
-        <p class="blockquote quote1">"*Slaps roof of Daniel* This bad boy can fit so much unconditional love and support for his friends and peers" - Used Car Salesman</p>
+        <h1 class="section-title">other skills.</h1>
     </div>
-    <div class="col-md-12 col-lg-4">
-        <p class="blockquote quote2">"So what if he sucks at math? And maybe he can't design for shit, and okay, maybe his code is pretty ass too. But what really matters, deep down, is how good a man is at mario kart. And Daniel is very, very, very good at mario kart." - The Dude I Just Destroyed in MK</p>
+    <div class="col-md-12 col-lg-8">
+        <div class="container">
+            <ul style="list-style-type: none">
+                <li>Freelance graphic design experience for over a year</li>
+                <li>Proficiency in Adobe Comp for wireframing and mockups</li>
+                <li class="">Social Media Coordinator for the 2018 WWU x ACM Hackathon</li>
+                <li class="">Current secretary of the Bellingham chapter of the Association of Computing Machinery</li>
+                <li class="">I speak Mandarin Chinese and English fluently</li>
+                <li>Familiar with Procreate for illustrations</li>
+                <li class="">Built this website from scratch</li>
+            </ul>
+        </div>
     </div>
-    <div class="col-md-12 col-lg-4">
-        <p class="blockquote quote3">"This weirdly circular Taiwanese man child highkey be lookin like a snacc, all day everyday." - Emilia Clarke</p>
-    </div>
-    </div>
+
+
 </div>
 </div>
 
