--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <h1 class="project-title">100.</h1>
         </div>
         <div class="col-md-12 col-lg-6">
-            <p class="project-description">Overclocked Ape is a static page for a design company founded by a friend. Utilizing advanced HTML, CSS, jQuery, and other frameworks, I explored the concepts of brutalism and maximalist design in a contemporary website. <a href="#">View Website.</a></p>
+            <p class="project-description">100. is a simple nodejs habit tracker and productivity app. This project was inspired by the #100DaysOfCode movement, but the usage of this productivity app is fairly versatile.</a></p>
         </div>
     </div>
     
