--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h1 class="project-title">OA.</h1>
         </div>
         <div class="col-md-12 col-lg-6 ">
-            <p class="project-description">Overclocked Ape is a static page for a design company founded by a friend. Utilizing advanced HTML, CSS, jQuery, and other frameworks, I explored the concepts of brutalism and maximalist design in a contemporary website. <a href="#">View Website.</a></p>
+            <p class="project-description">Overclocked Ape is a static page for a design company founded by a friend. Utilizing HTML, CSS, jQuery, and other frameworks, I explored the concepts of brutalism and maximalist design in a contemporary website. <a href="#">View Website.</a></p>
         </div>
     </div>
     
