--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
             <a class="nav-link projects-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link software-link" href="#software">Software</a>
-          </li>
-          <li class="nav-item text-center">
             <a class="nav-link skills-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item text-center">
@@ -84,15 +81,11 @@
 
 <div class="about container-fluid padding" id="about">
 <div class="row padding">
-    <div class="col-md-12 col-lg-3">
-        <!-- img-fluid class makes it responsive -->
-        <h1 class="section-title">about.</h1>
-    </div>
-
-    <div class="col-md-12 col-lg-9">
-        <div class="container">
-            <p class="lead"><span class="greeting">Hi. </span>I'm <em>Daniel</em> - a 19 year old second year computer science student at Western Washington University fascinated with the role of digital media in the human experience. I enjoy creating <em>functional</em> and <em>elegant</em> applications with an emphasis on creative and unique UI/UX. I like to implement different design philosophies and experiment with visual elements in order to enhance the interactivity and user experience of the product.</p>
-            <p class="lead">Lately, I've been pretty interested in machine learning, data science, and data visualization. When i'm not busy with coursework or playing around with various side projects, I enjoy writing, drawing, and cooking.</p>
+    <div class="col-lg-12">
+        <div class="about-card container">
+            <p class="lead"><span class="section-title">Hi. </span>I'm <em>Daniel</em> - a 19 year old developer and designer fascinated with the role of digital media in the human experience. I've always been pretty interested in UI/UX, and I enjoy creating elegant and functional web applications/websites with various technologies and frameworks. I tend towards minamlist and functional design practices, but I'm comfortable implementing various design philosophies depending on the client's needs. Recently, I've been pretty interested in the concept of brutalism and maximalism in contemporary web design.</p>
+            <p class="lead">I'm also currently a junior at Western Washington University studying computer science, with a focus on machine learning and big data.</p> 
+            <p class="lead"> When i'm not busy with coursework or playing around with various side projects, I enjoy writing, drawing, and cooking. You can find my social links below - feel free to contact me, whether for business inquiries or just to chat!</p>
             <hr>
             <p style="text-align: center">always creating. always learning.</p>
         </div>
@@ -112,7 +105,7 @@
 <div class=" container-fluid padding" id="projects">
 <div class="row projects text-center">
     <div class="col-12">
-        <p class="projects-banner">projects projects projects projects projects projects projects projects projects projects projects projects projects projects</p>
+        <p class="projects-banner">projects</p>
     </div>
 </div>
 </div>
@@ -125,60 +118,50 @@
 
 <div class="projects-showcase container-fluid padding" id="projects">
     <div class="row project-row">
-        <div class="col-md-12 col-lg-6 project-title">
-            <h1 class="project-title">OA.</h1>
-        </div>
-        <div class="col-md-12 col-lg-6 ">
-            <p class="project-description">Overclocked Ape is a static page for a design company founded by a friend. Utilizing HTML, CSS, jQuery, and other frameworks, I explored the concepts of brutalism and maximalist design in a contemporary website. <a href="#">View Website.</a></p>
-        </div>
-    </div>
     
     <div class="row project-row">
         <div class="col-md-12 col-lg-6">
             <h1 class="project-title">CC.</h1>
         </div>
+
         <div class="col-md-12 col-lg-6">
-            <p class="project-description">Campus Corners started off as an attempt to practice creating node web applications, but grew into a large project that ended up attractinve a decent amount of users. Now, it is a popular site used by newcomers to Western Washington University and seniors alike to discover new and interesting locations on campus. <a href="#">View Website.</a></p>
+            <div class="project-description">
+                <p >Campus Corners started off as an attempt to practice creating node web applications, but grew into a large project that ended up attractinve a decent amount of users. Now, it is a popular site used by newcomers to Western Washington University and seniors alike to discover new and interesting locations on campus. <a href="#">View Website.</a></p>
+            </div>
         </div>
     </div>
 
     <div class="row project-row">
         <div class="col-md-12 col-lg-6">
-            <h1 class="project-title">100.</h1>
+            <p class="project-description">100. is a simple nodejs habit tracker and productivity app. This project was inspired by the #100DaysOfCode movement, but the usage of this productivity app is fairly versatile.</a></p>
         </div>
         <div class="col-md-12 col-lg-6">
-            <p class="project-description">100. is a simple nodejs habit tracker and productivity app. This project was inspired by the #100DaysOfCode movement, but the usage of this productivity app is fairly versatile.</a></p>
+            <h1 class="project-title">100.</h1>
         </div>
     </div>
     
 </div>
 
 
-<div class=" container-fluid padding" id="projects">
+<!-- ============================================================================== -->
+<!-- SOFTWARE -->
+<!-- ============================================================================== -->
+<div class=" container-fluid padding" id="skills">
 <div class="row projects text-center">
     <div class="col-12">
-        <p class="projects-banner">projects projects projects projects projects projects projects projects projects projects projects projects projects projects</p>
+        <p class="projects-banner">skills</p>
     </div>
 </div>
 </div>
 
-<!-- ============================================================================== -->
-<!-- SOFTWARE -->
-<!-- ============================================================================== -->
-
-<div class="about container-fluid padding" id="software">
+<div class="skills container-fluid padding" id="software">
 <div class="row padding">
-    <div class="col-md-12 col-lg-9">
-        <div class="container">
+    <div class="col-lg-12">
             <ul style="list-style-type: none">
                 <li class="software-desc1"> python | java | javascript | html/css </li>
                 <li class="software-desc2"> nodejs | express | r | c | mongoose | mongodb </li>
                 <li class="software-desc3"> react | django | flask | racket </li>
             </ul>
-        </div>
-    </div>
-    <div class="col-md-12 col-lg-3">
-        <h1 class="section-title">software.</h1>
     </div>
 
 
@@ -192,19 +175,16 @@
 
 <div class="bonus-section container-fluid padding" id="skills">
 <div class="row padding">
-    <div class="col-md-12 col-lg-4">
-        <h1 class="section-title">other skills.</h1>
-    </div>
-    <div class="col-md-12 col-lg-8">
+    <div class="col-lg-12 ">
         <div class="container">
             <ul style="list-style-type: none">
                 <li>Freelance graphic design experience for over a year</li>
                 <li>Proficiency in Adobe Comp for wireframing and mockups</li>
-                <li class="">Social Media Coordinator for the 2018 WWU x ACM Hackathon</li>
-                <li class="">Current secretary of the Bellingham chapter of the Association of Computing Machinery</li>
-                <li class="">I speak Mandarin Chinese and English fluently</li>
+                <li>Social Media Coordinator for the 2018 WWU x ACM Hackathon</li>
+                <li>Current secretary of the Bellingham chapter of the Association of Computing Machinery</li>
+                <li>I speak Mandarin Chinese and English fluently</li>
                 <li>Familiar with Procreate for illustrations</li>
-                <li class="">Built this website from scratch</li>
+                <li>Built this website from scratch</li>
             </ul>
         </div>
     </div>
@@ -222,31 +202,25 @@
 <!-- ============================================================================== -->
 
 
-<div class="contact container-fluid padding contact" id="contact">
-<div class="container">
-<div class="row text-center">
-    <div class="col-12">
-        <h2>Contact</h2>
-        <p class="lead">Email me at chuan.e.king@gmail.com, or shoot me a DM through my social links below.</p>
-        <p>Let's build something cool together.</p>
+<div class="contact container-fluid padding" id="contact">
+<div class="row">
+    <div class="col-md-12 col-lg-6">
+        <h2>Lets Talk.</h2>
+        <p class="lead">Email me at chuan.e.king@gmail.com, or shoot me a DM through my social links.</p>
+        <p> Let's build something cool together.</p>
     </div>
-    <hr class="light">
-    <div class="col-3">
-        <a href="https://www.facebook.com/profile.php?id=100022710424140"><i class="fab fa-facebook fa-3x footerIcon"></i></a>
-    </div>
-    <div class="col-3">
-        <a href="https://www.instagram.com/therealdanking/"><i class="fab fa-instagram fa-3x footerIcon"></i></a>
-    </div>
-    <div class="col-3">
-        <a href="https://www.linkedin.com/in/daniel-king-8050aa150/"><i class="fab fa-linkedin-in fa-3x footerIcon"></i></a>
-    </div>
-    <div class="col-3">
-        <a href="https://github.com/kingce"><i class="fab fa-github fa-3x footerIcon"></i></a>
+    <div class="col-md-12 col-lg-6">
+        <div class="links-wrapper">
+            <ul style="list-style: none">
+                <li><a href="https://www.facebook.com/profile.php?id=100022710424140">facebook</a></li>
+                <li><a href="https://www.instagram.com/therealdanking/">instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/daniel-king-8050aa150/">linkedin</a></li>
+                <li><a href="https://github.com/kingce">github</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 </div>
-</div>
-
 
 
 
@@ -256,15 +230,6 @@
 <!-- ============================================================================== -->
 
 <footer>
-<div class="container-fluid padding">
-<div class="row text-center">
-    <!-- Bottom of the footer -->
-    <div class="footer-right col-12">
-    <hr class="light">
-        <p>Website made from scratch by Daniel King using Bootstrap, HTML, CSS, and JQuery</p>
-        <p>&copy;Daniel King 2018</p>
-    </div>
-</div>
 </footer>
 
 
