minor stylistic changes

--- a/index.html
+++ b/index.html
@@ -205,9 +205,11 @@
 <div class="contact container-fluid padding" id="contact">
 <div class="row">
     <div class="col-md-12 col-lg-6">
-        <h2>Lets Talk.</h2>
-        <p class="lead">Email me at chuan.e.king@gmail.com, or shoot me a DM through my social links.</p>
-        <p> Let's build something cool together.</p>
+        <div class="contact-title">
+            <h2>Lets Talk.</h2>
+            <p class="lead">Email me at chuan.e.king@gmail.com, or shoot me a DM through my social links.</p>
+            <p> Let's build something cool together.</p>
+        </div>
     </div>
     <div class="col-md-12 col-lg-6">
         <div class="links-wrapper">
