--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <div class="row skills">
     <div class="col-lg-12">
-        <img src="./assets/skills-header.png" alt="Skills Header Illustration">
+        <h1>I've done some stuff.</h1>
     </div>
 
     <div class="col-lg-12">
@@ -92,7 +92,7 @@
 
 <div class="row projects">
     <div class="col-lg-12">
-        <h2>Here are some of the things that I worked on...</h2>
+        <h1>Here are some things that I worked on...</h1>
     </div>
 
     
