landing hero fixed

--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
 <div class="landing container-fluid text-center" id="home">
     <!-- Separate D and K for animations -->
     <div class="row">
-    <div class="ol-md-12 col-lg-5">
-        <img src="./assets/face.JPG" alt="Daniel Illustration">
+    <div class="col-md-12 col-lg-5">
+        <img src="./assets/headshot.png">
     </div>
+
     <div class="col-md-12 col-lg-7">
-        <h1><b>Hi! I'm Dan.</b></h1>
+        <h1>Hi! I'm Dan.</h1>
         <hr>
         <p class="about">I'm a 19 year old <b>designer</b> and <b>developer</b> based in Bellingham, Washington. I enjoy creating elegant and functional solutions with cutting edge technologies to solve interesting and relevant problems. I'm currently studying <b>Computer Science</b> at Western Washington University with a focus on <b>machine learning</b> and <b>big data</b>. In my free time, I enjoy <b>art</b>, <b>writing</b>, and am <b>slightly obsessed with cats</b>. You can view my projects and contact info below!</p>
         <hr>
-        <i class="fas fa-angle-double-down fa-7x"></i>
+        <i class="fas fa-angle-double-down fa-5x"></i>
     </div>
 </div>
 
@@ -57,7 +58,7 @@
 
 <div class="row skills">
     <div class="col-lg-12">
-        <h1>I've done some stuff.</h1>
+        <h1>I try to keep busy. </h1>
     </div>
 
     <div class="col-lg-12">
@@ -77,7 +78,6 @@
     
 </div>
 
-
 <div class="row software">
     <div class="col-lg-12">
         <h1>I create elegant and functional applications with... </h1>
@@ -92,9 +92,19 @@
 
 <div class="row projects">
     <div class="col-lg-12">
-        <h1>Here are some things that I worked on...</h1>
+        <h1>Here are some things that I worked on.</h1>
     </div>
 
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="project-card">
+                <p><b>Campus Corners</b> is a simple nodeJS made to make a large, intimidating campus feel a little bit more like home. Upperclassmen can submit cool, lesser known places tha they've discovered through the years - study spots, napping places, and everything in between. Built with NodeJS, Express, and some other basic stuff.</p>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <p><b>100.</b> is a simple habit tracker and productivity app inspired by the #100DaysOfCode challenge on social media. Users can track as many habits as they want, and are encouraged to practice each habit a bit every day for at least 100 days.</p>
+        </div>
+    </div>
     
 </div>
 
